--- a/wp-content/themes/jeelen/assets/css/theme.css
+++ b/wp-content/themes/jeelen/assets/css/theme.css
@@ -359,7 +359,10 @@ blockquote,
     line-height: 1.3;
     margin: 0 0 1.5rem;
     overflow: hidden;
-    padding: 0 0 0 2.5rem;
+    padding: 0;
+}
+blockquote:before, .pls-testimonials.style-1 .testimonial-wrap:before, .format-quote .entry-quote:before{
+	display: none;
 }
 .wp-block-quote.is-style-large {
     padding: 0 0 0 2.5rem;
