--- a/wp-content/themes/jeelen/assets/css/theme.css
+++ b/wp-content/themes/jeelen/assets/css/theme.css
@@ -3462,7 +3462,7 @@ body:not(.home, .pls-catalog-page) .pls-site-header.pls-header-overlay:not(.head
 	.pls-header-logo .pls-logo,
 	.pls-header-logo .pls-logo-light,
 	.pls-header-logo .pls-mobile-logo {
-		max-width: var(--pls-mobile-logo-width);
+		max-width: 290px;
 	}
 }
 
@@ -4048,7 +4048,7 @@ body:not(.home, .pls-catalog-page) .pls-site-header.pls-header-overlay:not(.head
     height: 100%
 }
 .pls-main-navigation ul.menu > li > a {
-    font-size: 13px;
+    font-size: 16px;
 	font-weight: 600;	
 	padding: 0 10px;
 	display: flex;
