--- a/wp-content/themes/jeelen/assets/css/theme.css
+++ b/wp-content/themes/jeelen/assets/css/theme.css
@@ -4055,6 +4055,7 @@ body:not(.home, .pls-catalog-page) .pls-site-header.pls-header-overlay:not(.head
 	flex-direction: row;
 	align-items: center;
 	text-transform: uppercase;
+	padding: 0 15px;
 }
 .pls-main-navigation.pls-menu-hover-color ul.menu > li > a {
 	color: var(--pls-main-menu-link-color);
